...
          }}
        >
          Actions
        </Text>

        <Button
          testID="button_open-sheet"
          title="Open sheet"
          onPress={() => {
            if (useImperative) openBottomSheetWithRef();
            else openBottomSheetWithState();
          }}
        />
...
