...
        width: SCREEN_WIDTH,
        height: SCREEN_HEIGHT - insets.top,
        position: 'absolute',
        top: insets.top
      }, props.style, containerAnimatedStyles],
      children: [/*#__PURE__*/_jsx(Animated.View, {
        testID: "bottomsheet-backdrop",
        style: {
          width: SCREEN_WIDTH,
          height: SCREEN_HEIGHT,
          transform: [{
            translateY: -insets.top
          }],
...
          },
          onPress: () => {
            if (closeOnBackdropTap) close();
          }
        })
      }), /*#__PURE__*/_jsxs(Animated.View, {
        testID: "bottomsheet",
        style: [{
          height: bottomSheetHeightSharedValue,
          width: SCREEN_WIDTH,
          position: 'absolute',
          bottom: 0,
          borderTopLeftRadius: borderRadius,
          borderTopRightRadius: borderRadius,
          boxShadow: `0 3px 7px 0 rgba(0, 0, 0, 0.5)`,
          backgroundColor: backgroundColor
        }, bottomSheetAnimatedStyles],
        children: [!hideHandle ? /*#__PURE__*/_jsx(View, {
          testID: "bottomsheet-handle-container",
          style: {
            paddingTop: 16,
            paddingBottom: 16,
            display: 'flex',
            flexDirection: 'row',
            justifyContent: 'center'
...
            }
          })
        }) : /*#__PURE__*/_jsx(_Fragment, {}), /*#__PURE__*/_jsx(GestureDetector, {
          gesture: panNative,
          children: /*#__PURE__*/_jsx(ScrollView, {
            ...props.scrollViewContentContainerProps,
            testID: "bottomsheet-content",
            onLayout: event => {
              scrollViewLayoutSizeSharedValue.value = event.nativeEvent.layout.height;
              props.scrollViewContentContainerProps?.onLayout?.(event);
            },
            onContentSizeChange: (width, height) => {
              if (height < scrollViewLayoutSizeSharedValue.value) {
...
