appId: com.jaf.matos.testing
tags:
  - baseline
---
- pressKey: Home
- clearState

- runScript: ./setup.js

- openLink: ${output.url}

- extendedWaitUntil:
    visible:
      id: "button_open-sheet"
    timeout: 10000

- tapOn:
    id: "button_open-sheet"

- waitForAnimationToEnd

- takeScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-collapsed-400h-with-long-text
    cropOn:
      id: "bottomsheet"

- swipe:
    start: 90%, 50%
    end: 90%, 35%
    duration: 400

- waitForAnimationToEnd

- takeScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-expanded-600h-with-long-text
    cropOn:
      id: "bottomsheet"

- swipe:
    start: 90%, 10%
    end: 90%, 25%
    duration: 200

- waitForAnimationToEnd

- repeat:
    times: 10
    while: 
      notVisible: 
        id: "last-text-node"
    commands:
      - swipe:
          start: 90%, 90%
          end: 90%, 65%
          duration: 200

- takeScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-collapsed-400h-with-long-text-end
    cropOn:
      id: "bottomsheet"

- swipe:
    start: 90%, 50%
    end: 90%, 35%
    duration: 400

- waitForAnimationToEnd

- takeScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-expanded-600h-with-long-text-end
    cropOn:
      id: "bottomsheet"
