appId: com.jaf.matos.testing
tags: 
  - gestures
  - scroll
---
- pressKey: Home
- clearState

- runScript: ./setup.js

- openLink: ${output.url}

- extendedWaitUntil:
    visible:
      id: "button_open-sheet"
    timeout: 10000

- tapOn: 
    id: "button_open-sheet"

- waitForAnimationToEnd

- extendedWaitUntil:
    visible:
      id: "first-text-node"
    timeout: 10000

- swipe:
    start: 90%, 40%
    end: 90%, 20%
    duration: 200

- waitForAnimationToEnd

- assertScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-expanded-600h-with-long-text.png
    cropOn:
      id: "bottomsheet"
    thresholdPercentage: 98

- extendedWaitUntil:
    visible:
      id: "first-text-node"
    timeout: 10000

- swipe:
    from:
      id: "bottomsheet"
    direction: DOWN
    duration: 400

- waitForAnimationToEnd

- extendedWaitUntil:
    visible:
      id: "first-text-node"
    timeout: 10000

- assertScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-collapsed-400h-with-long-text.png
    cropOn:
      id: "bottomsheet"
    thresholdPercentage: 98

