appId: com.jaf.matos.testing
tags: 
  - gestures
  - scroll
---
- pressKey: Home
- clearState

- runScript: ./setup.js

- openLink: ${output.url}

- extendedWaitUntil:
    visible:
      id: "button_open-sheet"
    timeout: 10000

- tapOn: 
    id: "button_open-sheet"

- waitForAnimationToEnd

- repeat:
    times: 10
    while: 
      notVisible: 
        id: "last-text-node"
    commands:
      - swipe:
          start: 90%, 90%
          end: 90%, 65%
          duration: 200

- extendedWaitUntil:
    visible:
      id: "last-text-node"
    timeout: 10000

- assertScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-collapsed-400h-with-long-text-end.png
    cropOn:
      id: "bottomsheet"
    thresholdPercentage: 98

- swipe:
    start: 90%, 90%
    end: 90%, 75%
    duration: 200

- waitForAnimationToEnd

- assertScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-expanded-600h-with-long-text-end.png
    cropOn:
      id: "bottomsheet"
    thresholdPercentage: 85

