appId: com.example
---
- runScript: ../../../dist/flows/bottomsheet/setup.js

- openLink: ${output.url}

- assertNotVisible:
    text: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, in!"

- tapOn:
    id: "button_open-sheet"

- assertVisible:
    text: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, in!"

- assertVisible:
    id: "bottomsheet-backdrop"

- tapOn:
    id: "bottomsheet-backdrop"

- assertNotVisible:
    text: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, in!"

- stopApp
