appId: com.jaf.matos.testing
tags: 
  - keyboard
--- 
- pressKey: Home
- clearState

- runScript: ./setup.js

- openLink: ${output.url}

- extendedWaitUntil:
    visible: 
      id: "button_open-sheet"
    timeout: 10000

- tapOn: 
    id: "button_open-sheet"

- waitForAnimationToEnd

- tapOn: 
    id: "form-input_description"

- waitForAnimationToEnd

- assertScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-collapsed-400h-with-form-and-keyboard
    cropOn: 
      id: "bottomsheet"
    thresholdPercentage: 98
