appId: com.example
---
- openLink: exp://192.168.1.10:8081

- assertNotVisible:
    id: 'bottomsheet'

- tapOn:
    id: 'button_open-sheet'

- assertVisible:
    id: 'bottomsheet'

- tapOn:
    id: 'bottomsheet-backdrop'

- assertNotVisible:
    id: 'bottomsheet'

- stopApp
