appId: com.example
---
- runScript: ./setup.js

- openLink: ${output.url}

- extendedWaitUntil:
    visible:
      id: "button_open-sheet"
    timeout: 30000

- assertNotVisible:
    id: "bottomsheet"
    optional: true

- assertNotVisible:
    id: "bottomsheet-backdrop"
    optional: true

- assertNotVisible:
    id: "bottomsheet-content"
    optional: true

- tapOn:
    id: "button_open-sheet"

- assertVisible:
    id: "bottomsheet"
    optional: true

- assertVisible:
    id: "bottomsheet-backdrop"
    optional: true

- assertVisible:
    id: "bottomsheet-content"
    optional: true

- tapOn:
    id: "bottomsheet-backdrop"
    optional: true

- assertNotVisible:
    id: "bottomsheet"
    optional: true

- stopApp
