appId: com.jaf.matos.testing
tags:
  - gestures
  - handle
  - scroll
---
- pressKey: Home
- clearState

- runScript: ./setup.js

- openLink: ${output.url}

- extendedWaitUntil:
    visible:
      id: "button_open-sheet"
    timeout: 10000

- tapOn:
    id: "button_open-sheet"

- extendedWaitUntil:
    visible:
      id: "bottomsheet"
    timeout: 10000

- extendedWaitUntil:
    visible:
      id: "bottomsheet-handle-container"
    timeout: 10000

- assertScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-collapsed-400h-with-long-text.png
    cropOn:
      id: "bottomsheet"
    thresholdPercentage: 98

- repeat:
    times: 10
    while:
      notVisible:
        id: "last-text-node"
    commands:
      - swipe:
          start: 90%, 90%
          end: 90%, 65%
          duration: 200

      - waitForAnimationToEnd

- assertScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-collapsed-400h-with-long-text-end.png
    cropOn:
      id: "bottomsheet"
    thresholdPercentage: 98

- swipe:
    from:
      id: "bottomsheet-handle-container"
    direction: DOWN
    duration: 100

- waitForAnimationToEnd

- assertNotVisible:
    id: "bottomsheet"
