appId: com.testing.jaf.matos
tags: 
  - gestures
  - scroll
---
- pressKey: Home
- clearState

- runScript: ./setup.js

- openLink: ${output.url}

- extendedWaitUntil:
    visible:
      id: "button_open-sheet"
    timeout: 10000

- tapOn: 
    id: "button_open-sheet"

- extendedWaitUntil:
    visible: 
      id: "bottomsheet"
    timeout: 10000

- assertNotVisible:
    id: "bottomsheet-handle-container"
