appId: com.jaf.matos.testing
tags:
  - gestures
  - scroll
  - handle
---
- pressKey: Home
- clearState

- runScript: ./setup.js

- openLink: ${output.url}

- extendedWaitUntil:
    visible:
      id: "button_open-sheet"
    timeout: 10000

- tapOn:
    id: "button_open-sheet"

- extendedWaitUntil:
    visible:
      id: "bottomsheet"
    timeout: 10000

- extendedWaitUntil:
    visible:
      id: "bottomsheet-handle-container"
    timeout: 10000

- assertScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-collapsed-400h-with-long-text.png
    cropOn:
      id: "bottomsheet"
    thresholdPercentage: 98

- swipe:
    from:
      id: "bottomsheet-handle-container"
    direction: UP
    duration: 100

- waitForAnimationToEnd

- assertScreenshot:
    path: ${SCREENSHOTS_DIR}/baselines/bottomsheet-expanded-600h-with-long-text.png
    cropOn:
      id: "bottomsheet"
    thresholdPercentage: 98
